RESOLVED FIXED15259
REGRESSION:Text overflows if a empty <td> is followed by a <td align="center">
https://bugs.webkit.org/show_bug.cgi?id=15259
Summary REGRESSION:Text overflows if a empty <td> is followed by a <td align="center">
Anantha Keesara
Reported 2007-09-22 21:53:24 PDT
1. Go to http://www.myspace.com 2. Navigate to Music tab from the Search Menu on the Home page. 3. Navigate to Music Videos from the Search Menu on MySpace Music page (http://www.myspace.com/index.cfm?fuseaction=music&MyToken=36ce119d-bb2c-459a-8c24-fe70590f5b06 ) Issue: ‘Browse By Artist’ list is displayed outside the table area. Behavior on other Browsers : IE ,FF, Opera : no issue.
Attachments
Text overflows If a empty <td> is followed by a <td align="center"> (432 bytes, text/html)
2007-09-22 21:56 PDT, Anantha Keesara
no flags
Patch, including change log and a layout test (44.98 KB, patch)
2007-10-20 20:48 PDT, mitz
hyatt: review+
Anantha Keesara
Comment 1 2007-09-22 21:56:24 PDT
Created attachment 16354 [details] Text overflows If a empty <td> is followed by a <td align="center">
Gavin Sherlock
Comment 2 2007-09-22 22:06:29 PDT
This doesn't happen on released Safari on the Mac, but does happen with a nightly build (I was using revision 25571), so is a regression (I don't have privileges to change the Summary to indicate as such).
mitz
Comment 3 2007-09-23 00:37:36 PDT
This appears to be a bug in preferred width calculation when there is word spacing involved. A simpler test case: <div style="position: absolute; border:solid ; word-spacing: 10px;"> lorem ipsum dolor</div>
David Kilzer (:ddkilzer)
Comment 4 2007-09-23 09:57:02 PDT
This bug occurs in WebKit Nightly r11976.
David Kilzer (:ddkilzer)
Comment 5 2007-09-23 09:59:01 PDT
mitz
Comment 6 2007-09-24 08:20:54 PDT
Bug 15270 looks similar. Fixing this bug should fix it too.
mitz
Comment 7 2007-10-20 20:48:39 PDT
Created attachment 16756 [details] Patch, including change log and a layout test
Dave Hyatt
Comment 8 2007-10-20 22:36:48 PDT
Comment on attachment 16756 [details] Patch, including change log and a layout test r=me
mitz
Comment 9 2007-10-21 00:23:56 PDT
Note You need to log in before you can comment on or make changes to this bug.